package enumerators;

public enum TerrainType {
    ROAD,
    SAND,
    TROUBLEDWATER,
    WATER,
    GRASS,
    MEDIUMGRASS,
    TALLGRASS,
    WALL,
    TREE,
    PORTALEND,
    PORTALTRANSPORT;
}
